# vikara

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: update_libs.js
src/: App.tsx  button.module.css  constants.ts  export_form_input_config.ts  export_form_schema.ts  export_modal.module.css  layout.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/external-libs/: libaom.3.12.1.dylib  libdav1d.7.dylib  libde265.0.dylib  libheif.1.19.8.dylib  libomp.dylib  libsharpyuv.0.1.1.dylib
src-tauri/icons/: icon.icns
src-tauri/src/: image_helpers.rs  lib.rs  main.rs
